feat : proload data for all type

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -2,5 +2,9 @@
   "solar": "Solar",
   "house": "House",
   "battery": "Battery",
-  "watts": "{watts}W"
+  "watts": "{watts}W",
+  "solar_generation": "Solar generation",
+  "house_consumption": "House consumption",
+  "battery_charge": "Battery consumption",
+  "no_data": "No data for this date"
 }
