feat : switch between W and KW

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -6,5 +6,7 @@
   "solar_generation": "Solar generation",
   "house_consumption": "House consumption",
   "battery_charge": "Battery consumption",
-  "no_data": "No data for this date"
+  "no_data": "No data for this date",
+  "kilo_watt": "{kilo_watt}kWh",
+  "show_in_kilo_watt": "Show in kWh"
 }
