feat : show offline widget

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -6,9 +6,11 @@
   "solar_generation": "Solar generation",
   "house_consumption": "House consumption",
   "battery_charge": "Battery consumption",
-  "no_data": "No data for this date",
+  "no_data": "No available data for this date",
   "kilo_watt": "{kilo_watt}kWh",
   "show_in_kilo_watt": "Show in kWh",
   "generic_error": "An error occurred",
-  "no_internet_connection": "No internet connection detected. Please check your network settings and try again."
+  "no_internet_connection": "No internet connection detected. Please check your network settings and try again.",
+  "no_internet_connection_title": "No internet connection",
+  "retry": "Retry"
 }
