--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -12,5 +12,12 @@
   "generic_error": "An error occurred",
   "no_internet_connection": "No internet connection detected. Please check your network settings and try again.",
   "no_internet_connection_title": "No internet connection",
-  "retry": "Retry"
+  "retry": "Retry",
+  "solar_info": "Solar Info",
+  "house_info": "House Info",
+  "battery_info": "Battery Info",
+  "total": "Total : {watts}W",
+  "total_kilo_watt": "Total : {kilo_watt}kWh",
+  "average": "Average : {average}W",
+  "average_kilo_watt": "Average : {average_kilo_watt}kWh"
 }
